src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-ofT-dwF1000-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen true\n    open-maximized true\n    open-floating true\n    default-column-width { fixed 1000; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 75 × 50, bounds: 1272 × 712, states: [Activated]
